Closed Bug 729850 Opened 12 years ago Closed 12 years ago

sourcefabric.org font aliasing regression in Firefox 12.0a1 (2012-01-18)

Categories

(Core :: Layout: Text and Fonts, defect)

12 Branch
x86
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla13
Tracking Status
firefox12 + verified
firefox13 - verified

People

(Reporter: cpeterson, Assigned: jrmuizel)

References

()

Details

(Keywords: regression, Whiteboard: [qa!])

Attachments

(2 files)

Attached image Screenshot.png
STR:
1. Load http://www.sourcefabric.org/en/booktype/

AR:
The "Screenshots", "Testimonials", and "Booktype Team" headers have very chunky, aliased text! See the attached screenshot.

ER:
The header text should be smooth.

This bug is a regression!

* Firefox 12.0a1 (2012-01-17) = Text looks good
* Firefox 12.0a1 (2012-01-18) = Text looks BAD!
At first glance, I suspect bug 692879. Could you confirm the changesets (from about:buildconfig) for the "good" and "bad" builds you tested?
Setting gfx.canvas.azure.enabled = false in about:config fixes the regression.

I'm pretty sure this will affect sites using the Cufon web-font library, in addition to typeface.js (used on the sourcefabric.org site). I don't think we should ship with this rendering regression - it looks really ugly.
Blocks: 692879
Hmm, so I was wrong - Cufón doesn't show the same degradation; viewing http://kilianvalkhof.com/uploads/cufon-vs-typeface/ shows that cufon text renders the same with or without Azure enabled.
Comment on attachment 599987 [details] [diff] [review]
Get the point order correct when transforming a path

Review of attachment 599987 [details] [diff] [review]:
-----------------------------------------------------------------

Test?
Attachment #599987 - Flags: review?(matt.woodrow) → review+
Blocks: 730123
https://hg.mozilla.org/mozilla-central/rev/a65890126750
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
Tracking for FF12 since it's still affected by this regression. Please nominate for Aurora approval when you're comfortable with the testing the patch has received. Thanks!
Comment on attachment 599987 [details] [diff] [review]
Get the point order correct when transforming a path

[Approval Request Comment]
Regression caused by (bug #): bug 692879
User impact if declined: Canvas content will draw improperly
Testing completed (on m-c, etc.): on m-c, site in question fixed
Risk to taking this patch (and alternatives if risky): none, the code is currently just wrong.
String changes made by this patch: none
Attachment #599987 - Flags: approval-mozilla-aurora?
Comment on attachment 599987 [details] [diff] [review]
Get the point order correct when transforming a path

[Triage Comment]
Low risk fix for a regression in FF12.
Attachment #599987 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee: nobody → jmuizelaar
Whiteboard: [qa+]
I have verified this on:
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:12.0) Gecko/20100101 Firefox/12.0 beta 3

The header text is smooth when loading the URL from the description.
Verified fixed on FF 13b3: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:13.0) Gecko/20100101 Firefox/13.0
Status: RESOLVED → VERIFIED
Whiteboard: [qa+] → [qa!]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: