Bug 729850. CG: Get the point order correct when transforming a path. r=mwoodrow